# aa-subsidy

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  repro_clear_choice.py  trigger_esi_pull.py
aasubsidy/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  esi_openapi.json  models.py  tasks.py  urls.py  views.py
aasubsidy/contracts/: doctrines.py  filters.py  matching.py  payments.py  pricing.py  reviews.py  summaries.py  view.py
aasubsidy/contracts/admin/: rule_exceptions.py  settings.py
aasubsidy/helpers/: contract_import.py  db.py  services_update.py
aasubsidy/management/commands/: aasubsidy_backfill_doctrine_matches.py  aasubsidy_load_universe.py  convert_db.py  setup_subsidy.py  subsidy_setup.py
aasubsidy/migrations/: 0001_initial.py  0002_alter_general_options_subsidyitemprice_and_more.py  0002_doctrinesystem_is_active_and_more.py  0003_doctrinelocation.py  0003_subsidyconfig.py  0004_doctrine_matching_models.py  0004_usertablepreference.py  0005_fittingclaim.py  0005_subsidyconfig_contract_exclusions.py  0006_corporatecontractsubsidy_exempt_and_more.py  0006_subsidyconfig_matching_settings.py  0007_corporatecontractsubsidy_forced_fitting_and_more.py  0007_fittingclaimautoclearance.py
aasubsidy/templates/admin/: doctrine_detail.html  doctrines.html  rule_exceptions.html  settings.html
aasubsidy/templates/contracts/: base.html  dashboard.html  insights.html  payments.html  review.html  (+2 more)
aasubsidy/tests/: test_contract_filters.py  test_contract_import_helpers.py  test_matching.py  test_tasks.py
testauth/settings/: local.py
(+8 files in other folders)
