[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aasubsidy"
description = "Alliance Auth Doctrines on Contract Subsidy Program"
readme = "README.md"
keywords = [
    "allianceauth",
    "subsidy",
]
license = { file = "LICENSE" }
authors = [
    { name = "BioBrute", email = "BioBrute@figl.us" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4.3.1,<5",
    "allianceauth-corptools>=2.8.10",
    "fittings>=2.1.1",
]
urls.Changelog = "https://github.com/BroodLK/aa-subsidy/blob/master/CHANGELOG.md"
urls."Issue / Bug Reports" = "https://github.com/BroodLK/aa-subsidy/issues"

[tool.hatch.version]
path = "aasubsidy/__init__.py"

[tool.hatch.build]
include = [
    "/aasubsidy",
]
